--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,8 @@ html:
   extra_navbar: |
     <p>Powered by <a href="https://jupyterbook.org">Jupyter Book</a></p>
   google_analytics_id: "G-L9BCXQ2FD1"
+  logo: "_static/logo.png"
+  favicon: "_static/logo.png"
 
 # Расширения
 parse:
@@ -36,5 +38,6 @@ html:
 # Настройки автора и копирайта
 author: "Назаров Руслан"
 copyright: "2026"  # Или "2022–2026", если проект длительный
+
 
 
