--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Название книги
-title: "Как выучить много иностранных языков? Диалектический подход"
+title: О книге
 author: "Назаров Руслан"
 
 # Ссылка на репозиторий
@@ -33,6 +33,7 @@ parse:
 # Настройки автора и копирайта
 author: "Назаров Руслан"
 copyright: "2026"  # Или "2022–2026", если проект длительный
+
 
 
 
